tests/test_bool/bad/bad_assert.catala_en
## Test

```catala
declaration scope Foo:
  internal x content integer

scope Foo:
  definition x equals 0
  assertion x
```


```catala-test-inline
$ catala Interpret -s Foo
[ERROR] Error during typechecking, incompatible types:
--> bool
--> integer

Error coming from typechecking the following expression:
 --> tests/test_bool/bad/bad_assert.catala_en
  |
9 |   assertion x
  |             ^
  + Test

Type bool coming from expression:
 --> tests/test_bool/bad/bad_assert.catala_en
  |
9 |   assertion x
  |             ^
  + Test

Type integer coming from expression:
 --> tests/test_bool/bad/bad_assert.catala_en
  |
5 |   internal x content integer
  |                      ^^^^^^^
  + Test
#return code 255#
```
